dashboard: Path B harness green — jsdom + Polaris shims, MCP mocks default on; add MCP health + settings routes; stabilize Prisma for Vitest (dynamic db.server, sqlite bootstrap); fix telemetry import; add inventory live stub; set MCP_FORCE_MOCKS & USE_MOCK_DATA defaults in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,142 @@
+################################################################################
+# Core Services
+################################################################################
+
+# OpenAI — required for RAG generation and approvals summarization
 OPENAI_API_KEY=
+
+# Primary data stores (default values work for local docker-compose)
+POSTGRES_URL=postgresql+psycopg2://postgres:postgres@db:5432/app
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@db:5432/app
+DIRECT_URL=postgresql://postgres:postgres@db:5432/app
+SHADOW_DATABASE_URL=postgresql://postgres:postgres@db:5432/app_shadow
+REDIS_URL=redis://redis:6379/0
+
+# Chroma vector store backing RAG
+CHROMA_PATH=/workspace/chroma
+PERSIST_DIR=/workspace/storage
+INDEX_ID=hotrodan
+COLLECTION=hotrodan
+
+# Assistant service base URL (SSE + health checks)
+ASSISTANTS_BASE=http://127.0.0.1:8002
+
+################################################################################
+# Shopify Admin Application
+################################################################################
+
+# Shopify app credentials (from Partners dashboard)
+SHOPIFY_API_KEY=
+SHOPIFY_API_SECRET=
+SHOPIFY_CLIENT_ID=
+SHOPIFY_CLIENT_SECRET=
+
+# Shopify store context
 SHOPIFY_SHOP=
 SHOPIFY_ACCESS_TOKEN=
 SHOPIFY_API_VERSION=2024-10
+SCOPES=customer_read_customers,customer_read_orders,customer_write_orders
+
+# Incoming webhooks + bot signature verification
 SHOPIFY_WEBHOOK_SECRET=
+SHOPIFY_BOT_SIGNATURE_INPUT=
+SHOPIFY_BOT_SIGNATURE=
+SHOPIFY_BOT_SIGNATURE_AGENT=
+
+################################################################################
+# Zoho Mail (Approvals pipeline)
+################################################################################
+
 ZOHO_CLIENT_ID=
 ZOHO_CLIENT_SECRET=
 ZOHO_REFRESH_TOKEN=
 ZOHO_ORG_ID=
-POSTGRES_URL=postgresql+psycopg2://postgres:postgres@db:5432/app
-REDIS_URL=redis://redis:6379/0
-CHROMA_PATH=/data/chroma
-PERSIST_DIR=/data/storage
-INDEX_ID=hotrodan
-COLLECTION=hotrodan_docs
-SHOPIFY_BOT_SIGNATURE_INPUT=
-SHOPIFY_BOT_SIGNATURE=
-SHOPIFY_BOT_SIGNATURE_AGENT=https://shopify.com
 ZOHO_ACCOUNT_ID=
 ZOHO_DEFAULT_FROM=
+ZOHO_AUTH_BASE=https://accounts.zohocloud.ca
+ZOHO_MAIL_BASE=https://mail.zohocloud.ca
+ZOHO_TEST_TO=
+ZOHO_TEST_SUBJECT=
+ZOHO_TEST_BODY=
+
+################################################################################
+# Model Context Protocol (MCP) + Connectors
+################################################################################
+
+# Core MCP configuration
+MCP_API_URL=
+MCP_API_KEY=
+MCP_CLIENT_ID=
+MCP_REFRESH_TOKEN=
+
+# Feature toggles (Path B defaults)
+# Keep mocks enabled by default until live connectors and Shopify tokens land.
+ENABLE_MCP=true
+MCP_FORCE_MOCKS=true
+USE_MOCK_DATA=true
+
+# Connector API and reliability knobs
+CONNECTORS_API_URL=http://localhost:8003
+MCP_TIMEOUT_MS=5000
+MCP_MAX_RETRIES=3
+MCP_MAX_CONCURRENT=4
+MCP_RATE_LIMIT_RPS=5
+MCP_CACHE_TTL_MS=1000
+MCP_CACHE_SIZE=100
+MCP_BREAKER_FAILURE_THRESHOLD=5
+MCP_BREAKER_COOLDOWN_MS=10000
+MCP_BREAKER_HALF_OPEN_MAX=1
+MCP_KEEP_ALIVE=true
+
+################################################################################
+# Inventory Service
+################################################################################
+
+INVENTORY_MAX_WORKERS=8
+INVENTORY_CACHE_SIZE=1000
+INVENTORY_BATCH_SIZE=100
+INVENTORY_ENABLE_CACHING=true
+INVENTORY_ENABLE_PARALLEL=true
+INVENTORY_MONITORING=true
+INVENTORY_METRICS_RETENTION=7d
+INVENTORY_ALERT_THRESHOLD=5.0
+
+################################################################################
+# Analytics Connectors
+################################################################################
+
+# Google Analytics 4
+GA4_PROPERTY_ID=
+GA4_CLIENT_ID=
+GA4_CLIENT_SECRET=
+GA4_REFRESH_TOKEN=
+
+# Google Search Console
+GSC_CLIENT_ID=
+GSC_CLIENT_SECRET=
+GSC_REFRESH_TOKEN=
+
+# Bing Webmaster Tools
+BING_CLIENT_ID=
+BING_CLIENT_SECRET=
+BING_REFRESH_TOKEN=
+
+################################################################################
+# RAG Runtime
+################################################################################
+
+RAG_GENERATION_MODE=retrieval-only
+
+################################################################################
+# Feature Flags (Dashboard UI)
+################################################################################
+
+ENABLE_SEO=true
+ENABLE_INVENTORY=true
+ENABLE_SALES=true
+
+################################################################################
+# Testing & Tooling
+################################################################################
+
+PLAYWRIGHT_BASE_URL=http://localhost:3000
